--- a/styles/search.module.css
+++ b/styles/search.module.css
@@ -1,14 +1,28 @@
 .boxes {
-  width: 200px;
-  margin: 20px;
   cursor: pointer;
   overflow: hidden;
   text-align: center;
-  border-radius: 20px;
-  border: 2px solid white;
+  border-radius: 10px;
 }
 .boxes h4 {
   color: red;
   word-wrap: break-word;
-  margin: 5px;
+}
+.hover {
+  overflow: hidden;
+  position: relative;
+}
+.hide {
+  top: 100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.9);
+}
+.hover:hover .hide {
+  top: 0;
+  transition: 0.5s ease;
 }
