--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,7 +1,7 @@
 .backcover {
   padding: 200px;
   background-size: cover;
-  background-position-x: 40%;
+  background-position: 40%;
   background-repeat: no-repeat;
   background-image: url("/cover.jpg");
 }
@@ -20,6 +20,7 @@
   background: transparent;
 }
 .input {
+  width: 75%;
   border: none;
   color: white;
   font-size: 18px;
@@ -28,6 +29,7 @@
 }
 .input:focus {
   outline: none;
+  background: #000000a4;
 }
 .button {
   width: 45px;
