--- a/styles/movies.module.css
+++ b/styles/movies.module.css
@@ -1,19 +1,15 @@
-.slide,
-.hide {
+.cover {
   cursor: pointer;
+  position: relative;
+}
+.photo {
   border-radius: 10px;
 }
 .hide {
-  top: 100%;
-  width: 100%;
-  height: 100%;
-  display: flex;
+  left: 5px;
+  bottom: 3px;
+  padding: 5px 10px;
   position: absolute;
-  align-items: center;
-  justify-content: center;
-  background: rgba(0, 0, 0, 0.9);
-}
-.hover:hover .hide {
-  top: 0;
-  transition: 0.5s ease;
+  border-radius: 5px;
+  background: black;
 }
